# ipig_system_demo

./: .cursorrules  .env.example  .gitattributes  .gitignore  AUP.md  ERPSpec.md  HR_SYSTEM_IMPLEMENTATION_PLAN.md  QUICK_START.md  README.demo.md  README.md  STORAGE_SETUP.md  Weight Import.csv  _Spec.md  db_logs.txt  docker-compose.demo.yml  docker-compose.yml  file imput.csv  ipigmanager.md  migration_plan.md  notificationSpec.md  package-lock.json  product.md  progress.md  reset_database.ps1  role.md  skuSpec.md  start.ps1  temp_old.tsx  todo.md  uiSpec.md
backend/: Cargo.toml  DEBUG_422_ERROR.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PERMISSION_STATUS_REPORT.md  build_errors.txt  check_migrations.ps1  clear_and_resolve_migrations.ps1  compile_errors.txt  env.sample  errors.txt  fix_migration.ps1  fix_migration_009.md  fix_migration_sync.ps1  resolve_all_migrations.ps1  run_output.txt  warnings.txt
backend/migrations/: 001_aup_system.sql  001_initial_schema.sql  002_erp_base_data.sql  002_extend_schema.sql  003_frontend_requirements.sql  003_seed_accounts.sql  004_hr_system.sql  004_pig_frontend_requirements.sql  005_calendar_sync.sql  005_notification_types.sql  006_attachments.sql  006_audit_system.sql  007_role_soft_delete_and_admin_consolidation.sql  007_seed_data.sql  008_add_deleted_status.sql  008_reset_admin.sql  009_add_roles_is_active.sql  009_update_pig_breed_enum.sql  010_add_deleted_at_column.sql  010_assign_iacuc_staff_permissions.sql  011_hr_system_updates.sql  011_reorganize_permissions.sql  012_remove_pig_record_permissions.sql  (+40 more)
(+179 files in other folders)
